change database name, login user and password.

--- a/src/main/resources/templates/inxedu/web/front/index.html
+++ b/src/main/resources/templates/inxedu/web/front/index.html
@@ -1,1 +1,6 @@
-test
+<!DOCTYPE html>
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+
+Test
+<div th:include="/common/footer::footer"></div>
+</html>
