--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
-    <header>
-    <!-- 来自bootstrap例子 -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Project name</a>
-            </div>
-         </div>
-    </nav>
+    <header th:fragment="header">
+        <link th:href="@{/static/common/css/bootstrap.css}" rel="stylesheet">
+        <link th:href="@{/static/common/css/bootstrap.min.css}" rel="stylesheet">
+        <link th:href="@{/static/common/css/bootstrap-theme.css}" rel="stylesheet">
+        <link th:href="@{/static/common/css/bootstrap-theme-min.css}" rel="stylesheet">
+        <link th:href="@{/static/web/css/global.css}" rel="stylesheet">
+        <link th:href="@{/static/web/css/reset.css}" rel="stylesheet">
+        <link th:href="@{/static/web/css/theme.css}" rel="stylesheet">
+        <link th:href="@{/static/web/css/web.css}" rel="stylesheet">
+        <link th:href="@{/static/web/css/web_source.css}" rel="stylesheet">
+    </header>
 </header>
 </html>
