--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
-    <header th:fragment="header">
+    <header  id="header" th:fragment="header">
         <link th:href="@{/static/common/css/bootstrap.css}" rel="stylesheet">
         <link th:href="@{/static/common/css/bootstrap.min.css}" rel="stylesheet">
         <link th:href="@{/static/common/css/bootstrap-theme.css}" rel="stylesheet">
@@ -10,6 +10,6 @@
         <link th:href="@{/static/web/css/theme.css}" rel="stylesheet">
         <link th:href="@{/static/web/css/web.css}" rel="stylesheet">
         <link th:href="@{/static/web/css/web_source.css}" rel="stylesheet">
-    </header>
-</header>
+
+     </header>
 </html>
