--- a/src/main/resources/templates/common/web_header.html
+++ b/src/main/resources/templates/common/web_header.html
@@ -11,7 +11,7 @@
     <link th:href="@{/web/css/reset.css}" rel="stylesheet">
     <link th:href="@{/web/css/theme.css}" rel="stylesheet">
     <link th:href="@{/web/css/web.css}" rel="stylesheet">
-    <link th:href="@{/web/css/web_source.css}" rel="stylesheet">
+   <!-- <link th:href="@{/web/css/web_source.css}" rel="stylesheet">-->
     <link th:href="@{/web/css/mw_320_768.css}" rel="stylesheet" type="text/css"
           media="screen and (min-width: 320px) and (max-width: 768px)">
     <!--<script th:src="@{/web/js/common/html5.js}" type="text/javascript"></script>-->
