--- a/src/main/resources/templates/inxedu/web/front/index.html
+++ b/src/main/resources/templates/inxedu/web/front/index.html
@@ -103,7 +103,7 @@
                                         <span class="fsize14 c-999 ml5 f-fA">评论课程：</span>
                                     </section>
                                     <section class="hLh20 of mt10">
-                                        <a class="c-master fsize14" th:href="${contextPath}+'/front/couinfo/'+${comment.courseId}"><span th:text="'《'+${comment.courseName}+'》'"></span></a>
+                                        <a class="c-master fsize14" th:href="${contextPath}+'/web/course/detail/'+${comment.courseId}"><span th:text="'《'+${comment.courseName}+'》'"></span></a>
                                     </section>
                                     <section class="i-q-txt">
                                         <p>
