--- a/src/main/resources/templates/inxedu/web/front/index.html
+++ b/src/main/resources/templates/inxedu/web/front/index.html
@@ -4,7 +4,7 @@
     var theme_color = '${theme_color}';
 </script>
 </head>
-<div th:include="/common/header::header"></div>
+<div th:include="/common/web_header::header"></div>
 <body>
 <div th:with="contextPath=${contextPath }"></div>
 <div class="i-slide">
@@ -184,6 +184,6 @@
 
 </body>
 
-<div th:include="/common/footer::footer"></div>
+<div th:include="/common/web_footer::footer"></div>
 
 </html>
