user center partly code check-in.

--- a/src/main/resources/templates/common/web_header.html
+++ b/src/main/resources/templates/common/web_header.html
@@ -105,7 +105,7 @@
                     <span>Wo的学习</span>
                     <ol>
                         <li class="current"><a href="javascript:void(0)"
-                                               onclick="mobileHrefCheckLogin('/uc/index')" title="">免费课程</a></li>
+                                               onclick="mobileHrefCheckLogin('/usercenter/index')" title="">免费课程</a></li>
                         <li><a href="javascript:void(0)" onclick="mobileHrefCheckLogin('/web/showcoulist')"
                                title="">选课中心</a></li>
                         <li><a href="javascript:void(0)" onclick="mobileHrefCheckLogin('/uc/myFavorites')"
