user center partly code check-in.

--- a/src/main/resources/templates/web/usercenter/usercenter_layout.html
+++ b/src/main/resources/templates/web/usercenter/usercenter_layout.html
@@ -10,11 +10,11 @@
             <section class="of">
                 <div class="u-face-pic">
                     <img src="/web/img/avatar-boy.gif" alt="" class="userImgPhoto">
-                    <a th:href="${ctx}+'/uc/initUpdateUser/1'" title="" class="c-fff">修改头像</a>
+                    <a href="/web/usercenter/initUpdateUser/1" title="" class="c-fff">修改头像</a>
                 </div>
                 <h4 class="mt10"><span class="fsize16 c-666 userNameClass"><!-- 用户名 --></span></h4>
                 <div class="hLh30 mt10">
-                    <a th:href="${ctx}+'/uc/initUpdateUser/0'" title="" class="c-blue">个人资料设置</a>
+                    <a href="/web/usercenter/initUpdateUser/0" title="" class="c-blue">个人资料设置</a>
                 </div>
                 <div class="clear"></div>
             </section><!-- /u-face-attr -->
@@ -33,9 +33,9 @@
                 <li>
                     <span>Wo的学习</span>
                     <ol>
-                        <li><a th:href="${ctx}+'/uc/index'" title="">免费课程</a></li>
-                        <li><a th:href="${ctx}+'/front/showcoulist'" title="" target="view_window">选课中心</a></li>
-                        <li><a th:href="${ctx}+'/uc/myFavorites'" title="">Wo的收藏</a></li>
+                        <li><a href="/web/usercenter/index" title="">免费课程</a></li>
+                        <li><a href="/web/course/showcoulist" title="" target="view_window">选课中心</a></li>
+                        <li><a href="/web/usercenter/myFavorites" title="">Wo的收藏</a></li>
                     </ol>
                 </li>
             </ul>
@@ -43,8 +43,8 @@
                 <li>
                     <span>Wo的问答</span>
                     <ol>
-                        <li><a th:href="${ctx}+'/uc/myquestions/list'" title="">Wo的提问</a></li>
-                        <li><a th:href="${ctx}+'/uc/myrepquestions/list'" title="">Wo的回答</a></li>
+                        <li><a href="/web/usercenter/myquestions/list" title="">Wo的提问</a></li>
+                        <li><a href="/web/usercenter/myrepquestions/list" title="">Wo的回答</a></li>
                     </ol>
                 </li>
             </ul>
@@ -52,9 +52,9 @@
                 <li>
                     <span>Wo的资料</span>
                     <ol>
-                        <li><a th:href="${ctx}+'/uc/initUpdateUser/0'" title="">基本资料</a></li>
-                        <li><a th:href="${ctx}+'/uc/initUpdateUser/1'" title="">个人头像</a></li>
-                        <li><a th:href="${ctx}+'/uc/initUpdateUser/2'" title="">密码设置</a></li>
+                        <li><a href="/web/usercenter/initUpdateUser/0" title="">基本资料</a></li>
+                        <li><a href="/web/usercenter/initUpdateUser/1" title="">个人头像</a></li>
+                        <li><a href="/web/usercenter/initUpdateUser/2" title="">密码设置</a></li>
                     </ol>
                 </li>
             </ul>
@@ -62,7 +62,7 @@
                 <li>
                     <span>Wo的消息</span>
                     <ol>
-                        <li><a href="/uc/letter" title="">系统消息</a></li>
+                        <li><a href="/web/usercenter/letter" title="">系统消息</a></li>
                         <!-- <li><a href="" title="">其它消息</a></li> -->
                     </ol>
                 </li>
