--- a/src/main/resources/templates/web/usercenter/free_course.html
+++ b/src/main/resources/templates/web/usercenter/free_course.html
@@ -21,7 +21,7 @@
                                 <div>
                                     <section class="c-infor-tabTitle c-tab-title">
                                         <a href="javascript: void(0)" title="Wo的课程" style="cursor: default;">免费课程</a>
-                                        <a th:href="${ctx }+'/uc/freeCourseList'" title="免费课程" class="current">免费</a>
+                                        <a href="/usercenter/freeCourseList'" title="免费课程" class="current">免费</a>
                                     </section>
                                 </div>
                                 <div class="mt40">
@@ -47,11 +47,11 @@
                                                                     <img src="/static/inxweb/img/default-img.gif" class="img-responsive" th:alt="${course.courseName}" />
                                                                 </th:block>
                                                                 <div class="cc-mask">
-                                                                    <a th:href="'/uc/play/'+${course.courseId}" title="" class="comm-btn c-btn-1">继续学习</a>
+                                                                    <a th:href="'/usercenter/play/'+${course.courseId}" title="" class="comm-btn c-btn-1">继续学习</a>
                                                                 </div>
                                                             </section>
                                                             <h3 class="hLh30 txtOf mt10">
-                                                                <a th;href="'/uc/play/'+${course.courseId}" th:title="${course.courseName}" class="course-title fsize18 c-333" th:text="${course.courseName}"></a>
+                                                                <a th;href="'/usercenter/play/'+${course.courseId}" th:title="${course.courseName}" class="course-title fsize18 c-333" th:text="${course.courseName}"></a>
                                                             </h3>
                                                             <section class="mt10 of">
                                                                 <div class="time-bar-wrap">
@@ -77,7 +77,7 @@
                                             <!-- 公共分页 开始 -->
                                             <jsp:include page="/WEB-INF/view/common/front_page.jsp" />
                                             <!-- 公共分页 结束 -->
-                                            <form method="post" id="searchForm" action="${ctx}/uc/freeCourseList">
+                                            <form method="post" id="searchForm" action="/usercenter/freeCourseList">
                                                 <input type="hidden" id="pageCurrentPage" name="page.currentPage" value="1" />
                                             </form>
                                         </div>
