--- a/src/main/resources/templates/web/usercenter/favourite_course_list.html
+++ b/src/main/resources/templates/web/usercenter/favourite_course_list.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>个人中心</title>
+    <title>我的收藏</title>
     <div th:include="/common/web_header::header"></div>
 </head>
 <body>
@@ -14,77 +14,71 @@
                 <!-- 左侧，开始 -->
                 <menu  class="col-3 fl uMenu" th:include="/web/usercenter/usercenter_layout::layout"></menu>
                 <!-- 左侧，结束 -->
-
                 <article class="col-7 fl">
                     <div class="u-r-cont">
                         <section>
                             <div>
                                 <section class="c-infor-tabTitle c-tab-title">
-                                    <a href="javascript: void(0)" title="Wo的课程" style="cursor: default;">免费课程</a>
-                                    <a href="/usercenter/freeCourseList'" title="免费课程" class="current">免费</a>
+                                    <a href="javascript: void(0)" title="Wo的学习" style="cursor: default;">我的学习</a>
+                                    <a href="javascript: void(0)" title="Wo的收藏" class="current">我的收藏</a>
                                 </section>
                             </div>
+                            <section class="tar hLh30 pr10" style="background-color: #F6F6F6; margin-top: -20px;">
+                                <label class="hand c-999 vam"><input type="checkbox" name="" value="" style="vertical-align: -2px;" onclick="selectAll(this)">全选</label>
+                                <a href="javascript:void(0)" onclick="batchDelFav()" title="" class="vam ml10 c-blue">取消全部</a>
+                            </section>
                             <div class="mt40">
-                                <th:block th:if="${courseList==null and courseList.size()<=0 }">
-                                    <!-- /无数据提示 开始-->
-                                    <section class="no-data-wrap">
-                                        <em class="icon30 no-data-ico">&nbsp;</em>
-                                        <span class="c-666 fsize14 ml10 vam">暂无免费课程！</span>
-                                    </section>
-                                    <!-- /无数据提示 结束-->
-                                </th:block>
-                                <th:block th:if="${courseList!=null}">
-                                    <div class="u-course-list">
-                                        <article class="comm-course-list">
-                                            <ul class="clearfix">
-                                                <li  th:each="course:${courseList}">
-                                                    <div class="cc-l-wrap">
-                                                        <section class="course-img">
-                                                            <th:block th:if="${course.logo !=null and course.logo !=''}">
-                                                                <img th:src="${course.logo}" class="img-responsive" th:alt="${course.courseName}" />
-                                                            </th:block>
-                                                            <th:block th:if="${course.logo eq null}">
-                                                                <img src="/static/inxweb/img/default-img.gif" class="img-responsive" th:alt="${course.courseName}" />
-                                                            </th:block>
-                                                            <div class="cc-mask">
-                                                                <a th:href="'/usercenter/play/'+${course.courseId}" title="" class="comm-btn c-btn-1">继续学习</a>
-                                                            </div>
-                                                        </section>
-                                                        <h3 class="hLh30 txtOf mt10">
-                                                            <a th;href="'/usercenter/play/'+${course.courseId}" th:title="${course.courseName}" class="course-title fsize18 c-333" th:text="${course.courseName}"></a>
-                                                        </h3>
-                                                        <section class="mt10 of">
-                                                            <div class="time-bar-wrap">
-                                                                <div class="lev-num-wrap" th:title="'已学'+${course.studyPercent}+'%'">
-                                                                    <th:block th:if="${course.studyPercent>='100'}">
-                                                                        <aside class='lev-num-bar bg-orange' th:style="'width:'+${course.studyPercent}+'%;'"></aside>
-                                                                    </th:block>
-                                                                    <th:block th:unless="${course.studyPercent>='100'}">
-                                                                        <aside class='lev-num-bar bg-green' th:style="'width:'+${course.studyPercent}+'%;'"></aside>
-                                                                    </th:block>
-                                                                    <span class="lev-num">
-                                                                            <big th:text="${course.studyPercent}+'%'"></big>
-                                                                            /
-                                                                            <small>100%</small>
-                                                                        </span>
-                                                                </div>
-                                                            </div>
-                                                        </section>
+                                <!-- /无数据提示 开始-->
+                                <section class="no-data-wrap" th:if="${favoriteList eq null or favoriteList eq ''}">
+                                    <em class="icon30 no-data-ico">&nbsp;</em> <span class="c-666 fsize14 ml10 vam">您还没有收藏任何课程哦！</span>
+                                </section>
+                                <!-- /无数据提示 结束-->
+
+                                <div class="u-sys-news u-collection-list" th:if="${favoriteList ne null and favoriteList ne ''}">
+                                    <form action="">
+                                        <dl th:each="favorite:${favoriteList}">
+                                            <dt>
+                                                <section class="tar">
+                                                    <p class="hLh30">
+                                                        <b class="fsize14 f-fA c-red"><fmt:formatDate type="both" value="${favorite.addTime }" pattern="yyyy年" /></b>
+                                                    </p>
+                                                    <p class="hLh20">
+                                                        <span class="f-fA c-666"><fmt:formatDate type="both" value="${favorite.addTime }" pattern="MM月dd日 HH:mm" /></span>
+                                                    </p>
+                                                    <p class="hLh20">
+                                                        <span class="f-fA c-999">收藏</span>
+                                                    </p>
+                                                </section>
+                                            </dt>
+                                            <dd>
+                                                <section class="mt10">
+                                                    <div class="of cancel-colle">
+                                                        <div class="fr tac">
+                                                            <label class="hand"><input type="checkbox" style="vertical-align: -2px;" name="favouriteId" th:value="${favorite.favouriteId}"></label> <br>
+                                                            <a th:href="'/web/usercenter/deleteFaveorite'+/${favorite.favouriteId}" title="" class="c-blue">取消收藏</a>
+                                                        </div>
+                                                        <a th:href="'/front/couinfo/'+${favorite.courseId }" title="">
+                                                            <img th:if="${favorite.logo ne empty}" th:src="${favorite.logo}" width="120" alt="">
+                                                            <img th:unless="${favorite.logo ne empty}"  src="/web/img/default-img.gif" width="120" alt="">
+                                                        </a>
                                                     </div>
-                                                </li>
-                                            </ul>
-                                        </article>
-                                        <!-- 公共分页 开始 -->
-                                        <jsp:include page="/WEB-INF/view/common/front_page.jsp" />
-                                        <!-- 公共分页 结束 -->
-                                        <form method="post" id="searchForm" action="/usercenter/freeCourseList">
-                                            <input type="hidden" id="pageCurrentPage" name="page.currentPage" value="1" />
-                                        </form>
-                                    </div>
-                                </th:block>
+                                                    <div class="hLh30 txtOf">
+                                                        <a th:href="'/front/couinfo/'+${favorite.courseId }" class="c-666 fsize14" th:text="${favorite.courseName }"></a>
+                                                    </div>
+                                                </section>
+                                            </dd>
+                                        </dl>
+                                    </form>
+                                </div>
+                                <!-- 公共分页 开始 -->
+                                <jsp:include page="/WEB-INF/view/common/front_page.jsp" />
+                                <!-- 公共分页 结束 -->
+                                <form action="/web/usercenter/myFavorites" method="post" id="searchForm">
+                                    <input type="hidden" name="page.currentPage" value="1" id="pageCurrentPage" />
+                                </form>
                             </div>
                         </section>
-                        <!-- /我的课程 -->
+                        <!-- /Wo的消息 -->
                     </div>
                 </article>
             </div>
