--- a/src/main/resources/templates/web/usercenter/usercenter_layout.html
+++ b/src/main/resources/templates/web/usercenter/usercenter_layout.html
@@ -31,26 +31,26 @@
         <dd class="u-m-dd">
             <ul>
                 <li>
-                    <span>Wo的学习</span>
+                    <span>我的学习</span>
                     <ol>
                         <li><a href="/web/usercenter/index" title="">免费课程</a></li>
                         <li><a href="/web/course/showcoulist" title="" target="view_window">选课中心</a></li>
-                        <li><a href="/web/usercenter/myFavorites" title="">Wo的收藏</a></li>
+                        <li><a href="/web/usercenter/myFavorites" title="">我的收藏</a></li>
                     </ol>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <span>Wo的问答</span>
+                    <span>我的问答</span>
                     <ol>
-                        <li><a href="/web/usercenter/myquestions/list" title="">Wo的提问</a></li>
-                        <li><a href="/web/usercenter/myrepquestions/list" title="">Wo的回答</a></li>
+                        <li><a href="/web/usercenter/myquestions/list" title="">我的提问</a></li>
+                        <li><a href="/web/usercenter/myrepquestions/list" title="">我的回答</a></li>
                     </ol>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <span>Wo的资料</span>
+                    <span>我的资料</span>
                     <ol>
                         <li><a href="/web/usercenter/initUpdateUser/0" title="">基本资料</a></li>
                         <li><a href="/web/usercenter/initUpdateUser/1" title="">个人头像</a></li>
@@ -60,7 +60,7 @@
             </ul>
             <ul>
                 <li>
-                    <span>Wo的消息</span>
+                    <span>我的消息</span>
                     <ol>
                         <li><a href="/web/usercenter/letter" title="">系统消息</a></li>
                         <!-- <li><a href="" title="">其它消息</a></li> -->
