add admin related files.

--- a/src/main/resources/templates/admin/main/login.html
+++ b/src/main/resources/templates/admin/main/login.html
@@ -7,12 +7,12 @@
     <meta charset="utf-8" http-equiv="Content-Type" />
     <!-- End of Meta -->
     <!-- Page title -->
-    <title>登录 -${websitemap.web.company}-${websitemap.web.title}</title>
+    <title th:text="'登录 -'+${websitemap.web.company}+'-'+${websitemap.web.title}"></title>
     <!-- End of Page title -->
-    <meta name="author" content="${websitemap.web.author}" />
-    <meta name="keywords" content="${websitemap.web.keywords}" />
-    <meta name="description" content="${websitemap.web.description}" />
-    <link rel="shortcut icon" href="${ctx}/favicon.ico" type="image/x-icon">
+    <meta name="author" th:content="${websitemap.web.author}" />
+    <meta name="keywords" th:content="${websitemap.web.keywords}" />
+    <meta name="description" th:content="${websitemap.web.description}" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <!-- Libraries -->
     <script type="text/javascript">
         function enterSubmit(event) {
@@ -37,30 +37,30 @@
     <div id="container">
         <div id="box">
             <h2>网校后台管理系统</h2>
-            <form action="${ctx}/admin/main/login" method="POST" id="loginForm">
+            <form action="/admin/main/login" method="POST" id="loginForm">
                 <p class="main">
                     <label>用户名: </label>
-                    <input name="sysUser.loginName" onkeyup="enterSubmit(event)" value="${sysUser.loginName}" placeholder="输入用户名" />
+                    <input name="sysUser.loginName" onkeyup="enterSubmit(event)"  placeholder="输入用户名" />
                     <label>密码: </label>
-                    <input type="password" onkeyup="enterSubmit(event)" name="sysUser.loginPwd" value="${sysUser.loginPwd}" placeholder="输入密码">
+                    <input type="password" onkeyup="enterSubmit(event)" name="sysUser.loginPwd" placeholder="输入密码">
                 </p>
                 <p class="main">
                     <label>验证码: </label>
                     <input name="randomCode" onkeyup="enterSubmit(event)" placeholder="验证码" style="width: 105px;"  maxlength="4"/>
                     <span class="yzm-pic">
-							<img src="${ctx}/ran/random" alt="验证码，点击图片更换" onclick="this.src='${ctx}/ran/random?random='+Math.random();" />
+							<img src="/ran/random" alt="验证码，点击图片更换" onclick="this.src='/ran/random?random='+Math.random();" />
 						</span>
                 </p>
                 <p class="space">
                     <input type="submit" value="登录" class="login" />
-                    <span>${message}</span>
+                    <span th:text="${message}"></span>
                 </p>
             </form>
         </div>
         <div class="login-foot">
-				<span>
-					Powered By <a target="_blank" href="#" style="color: #666;">${websitemap.web.company}</a>
-				</span>
+            <span>
+                Powered By <a target="_blank" href="#" style="color: #666;" th:text="${websitemap.web.company}"></a>
+            </span>
         </div>
     </div>
 </div>
