--- a/src/main/resources/templates/common/web_header.html
+++ b/src/main/resources/templates/common/web_header.html
@@ -41,7 +41,7 @@
                         </em><span class="vam ml5">注册</span>
                     </a>
                 </li>
-                <li class="mr10 undis" id="is-login-one"><a href="/web/usercenter/letter'" title="消息" id="headerMsgCountId">
+                <li class="mr10 undis" id="is-login-one"><a href="/web/usercenter/letter" title="消息" id="headerMsgCountId">
                     <em class="icon18 news-icon">&nbsp;</em>
                 </a><q class="red-point" style="display: none">&nbsp;</q></li>
                 <li class="h-r-user undis" id="is-login-two"><a href="/web/usercenter/index" title="">
