--- a/src/main/resources/templates/inxedu/web/front/index.html
+++ b/src/main/resources/templates/inxedu/web/front/index.html
@@ -278,7 +278,7 @@
                         <div class="clear"></div>
                     </article>
                     <section class="tac pt20">
-                        <a th:href="${contextPath }+'/front/teacherlist'" title="全部讲师" class="comm-btn c-btn-2">全部讲师</a>
+                        <a href="/web/teacherlist" title="全部讲师" class="comm-btn c-btn-2">全部讲师</a>
                     </section>
                 </div>
             </section>
