--- a/src/main/resources/templates/web/usercenter/my_question_list.html
+++ b/src/main/resources/templates/web/usercenter/my_question_list.html
@@ -18,11 +18,11 @@
                     <div class="u-r-cont">
                         <section>
                             <div>
-                                <span class="fr"><a href="${ctx }/questions/toadd" title="" class="comm-btn c-btn-6" style="font-size: 16px; height: 22px; line-height: 22px; padding: 0 20px;">去提问</a></span>
+                                <span class="fr"><a href="/questions/toadd" title="" class="comm-btn c-btn-6" style="font-size: 16px; height: 22px; line-height: 22px; padding: 0 20px;">去提问</a></span>
                                 <section class="c-infor-tabTitle c-tab-title cnew-tab-title">
                                     <a href="javascript: void(0)" title="我的问答" style="cursor: default;"我的问答</a>
-                                    <a href="${ctx }/uc/myquestions/list" title="我的提问" class="current">我的提问</a>
-                                    <a href="${ctx }/uc/myrepquestions/list" title="我的回答">我的回答</a>
+                                    <a href="/web/myquestion/list" title="我的提问" class="current">我的提问</a>
+                                    <a href="/web/myrepquestions/list" title="我的回答">我的回答</a>
                                 </section>
                             </div>
                             <div class="mt40">
