--- a/src/main/resources/templates/web/questions/questions-add.html
+++ b/src/main/resources/templates/web/questions/questions-add.html
@@ -1,9 +1,9 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"%>
-<%@ include file="/base.jsp"%>
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<title>提问题</title>
+	<title>提问题</title>
+	<div th:include="/common/web_header::header"></div>
 </head>
 <body>
 	<div class="bg-fa of">
@@ -67,9 +67,8 @@
 								<dd>
 									<div class="taglist clearfix" id="js-tags">
 										<input type="hidden" name="questionsTag" id="questionsTag" value="">
-										<c:forEach items="${questionsTagList }" var="questionsTag">
-											<a title="${questionsTag.questionsTagName }" data-id="${questionsTag.questionsTagId }" class="list-tag" href="javascript:;">${questionsTag.questionsTagName }</a>
-										</c:forEach>
+											<a th:each="questionsTag:${questionsTagList }" th:title="${questionsTag.questionsTagName }"
+											   th:data-id="${questionsTag.questionsTagId }" class="list-tag" href="javascript:;" th:text="${questionsTag.questionsTagName }"></a>
 									</div>
 									<!-- /标签集 -->
 								</dd>
@@ -79,9 +78,9 @@
 									<span class="c-999 fsize14">&nbsp;</span>
 								</dt>
 								<dd class="pr">
-									<label class=""><input type="text" style="width: 80px;" name="randomCode" placeholder="输入验证码" value="" onkeyup='$(this).parent().next().next().html("<img width=\"16\" height=\"16\" alt=\"正确\" src=\"${ctx }/static/inxweb/img/d-icon.png\">")'></label>
+									<label class=""><input type="text" style="width: 80px;" name="randomCode" placeholder="输入验证码" value="" onkeyup='$(this).parent().next().next().html("<img width=\"16\" height=\"16\" alt=\"正确\" src=\"/web/img/d-icon.png\">")'></label>
 									<div class="v-code-pic">
-										<img src="${ctx}/ran/random" alt="验证码，点击图片更换" onclick="this.src='${ctx}/ran/random?random='+Math.random();" width="80" height="34" class="vam">
+										<img src="/ran/random" alt="验证码，点击图片更换" onclick="this.src='/ran/random?random='+Math.random();" width="80" height="34" class="vam">
 										<span class="c-999">看不清</span>
 										<a href="javascript:void(0)" onclick="$(this).prev().prev().click();" title="" class="c-green"> 换一换 </a>
 									</div>
@@ -105,7 +104,7 @@
 				<aside class="fl col-3">
 					<div class="mt30 pl10">
 						<section class="q-tip-pic col-3">
-							<img src="${ctx }/static/inxweb/img/tipQe.png" width="100%" alt="亲，您要提问吧？">
+							<img src="/web/img/tipQe.png" width="100%" alt="亲，您要提问吧？">
 						</section>
 						<h5 class="pt10">
 							<span class="fsize18 c-333 vam">亲，您要提问吧？<br>
@@ -145,6 +144,6 @@
 		</section>
 		<!-- /提问题 结束 -->
 	</div>
-	<script type="text/javascript" src="${ctx}/static/inxweb/questions/questions_add.js"></script>
+	<script type="text/javascript" th:src="@{/web/js/questions/questions_add.js}"></script>
 </body>
 </html>
