--- a/src/main/resources/templates/web/usercenter/free_course.html
+++ b/src/main/resources/templates/web/usercenter/free_course.html
@@ -21,7 +21,7 @@
                                 <div>
                                     <section class="c-infor-tabTitle c-tab-title">
                                         <a href="javascript: void(0)" title="Wo的课程" style="cursor: default;">免费课程</a>
-                                        <a href="/usercenter/freeCourseList'" title="免费课程" class="current">免费</a>
+                                        <a href="/usercenter/freeCourseList" title="免费课程" class="current">免费</a>
                                     </section>
                                 </div>
                                 <div class="mt40">
