add admin related files.

--- a/src/main/resources/templates/admin/main/index.html
+++ b/src/main/resources/templates/admin/main/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>主页面</title>
-    <div th:include="/admin/common/frame::header"></div>
-</head>
+<div th:replace="/admin/common/frame::header"></div>
+
 <body>
-    <div th:include="/admin/common/frame::body"></div>
+    <div th:replace="/admin/common/frame::title"></div>
+    <div th:replace="/admin/common/frame::search"></div>
+    <div th:replace="/admin/common/frame::navbar"></div>
+    <div th:replace="/admin/common/frame::sidebar"></div>
+    <div th:replace="/admin/common/frame::styleSwither"></div>
+    <div id="content">
+        <div th:replace="/admin/common/frame::manage"></div>
+        <div th:replace="/admin/common/frame::nav"></div>
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span12 center" style="text-align: center;">
+                    <ul class="stat-boxes">
+                        <li>
+                            <div class="left peity_bar_good"><span>2,4,9,7,12,10,12</span>+20%</div>
+                            <div class="right">
+                                <strong>36094</strong>
+                                Visits
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left peity_bar_neutral"><span>20,15,18,14,10,9,9,9</span>0%</div>
+                            <div class="right">
+                                <strong>1433</strong>
+                                Users
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left peity_bar_bad"><span>3,5,9,7,12,20,10</span>-50%</div>
+                            <div class="right">
+                                <strong>8650</strong>
+                                Orders
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left peity_line_good"><span>12,6,9,23,14,10,17</span>+70%</div>
+                            <div class="right">
+                                <strong>8650</strong>
+                                Orders
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    </div>
 </body>
